<resources>
    <string name="app_name">recipe_book</string>
    <string name="recipe_name">Recipe name:</string>
    <string name="recipe_category">Category:</string>
    <string name="commentary">Comments:</string>
    <string name="deleteButton">delete</string>
    <string name="addButton">add</string>
    <string name="deleteActivity">Delete a recipe</string>
    <string name="hintRecipeName">Name of the recipe</string>
    <string name="hintRecipeCategory">Name of the category</string>
    <string name="RecipeToDelete">Recipe to delete</string>
    <string name="addActivity">Add a new recipe</string>
    <string name="hintNewRecipeName">Name of the new recipe</string>
    <string name="hintComentary">comments</string>
    <string name="hintCategory">category</string>
    <string name="message_content1">empty fields are unauthorized</string>
    <string name="message_content2">empty fields are unauthorized</string>
    <string name="updateButton">update</string>
    <string name="updateActivity">Update a recipe</string>
    <string name="hintDeleteRecipeName">Recipe to delete</string>
    <string name="action_setting">add a recipe</string>
    <string name="action_setting2">suppress a recipe</string>
    <string name="action_setting3">modify a recipe</string>
    <string name="action_setting4">search a recipe</string>
    <string name="tvIngredients">Ingredients:</string>
    <string name="hintIngredient1">Ingredients 1</string>
    <string name="hintIngredient2">Ingredients 2</string>
    <string name="tv_Image">Image:</string>
    <string name="hint_Image_name">Image name</string>

</resources>